# jellyc

./: .gitignore  CMakeLists.txt  LICENSE  README.md
jelly-syntax/: CHANGELOG.md  README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
jelly-syntax/syntaxes/: jelly.tmLanguage.json
lib/: libc.jel  std.jel
src/: adt.h  arena.c  arena.h  diagnostic.c  diagnostic.h  enums.h  float.c  float.h  fwd.h  gen-llvm.c  gen.c  gen.h  hash.c  hash.h  keyword-defs  lex.c  lex.h  main.c  parse.c  parse.h  precedence-defs  print.c  print.h  role-analysis.c  role-analysis.h  simple-types  tir-analysis.c  tir-analysis.h  tir2mir.c  tir2mir.h  token-defs  type-analysis.c  type-analysis.h  util.c  util.h  wrappers.h
src/data/: ast.h  mir.h  rir.h  tir.c  tir.h
test/: basic_lexer.jel  errors1.jel  errors_affine.jel  errors_role.jel  fibonacci.jel  generic_function.jel  gl.jel  hello_world.jel  test1.jel
test/opengl/: gl.jel  gladp.py  glfw.jel  main.jel  run-c.sh  run-llvm.sh  sky.jel  terrain.jel  util.jel
test/opengl/glad/include/glad/: gl.h
test/opengl/glad/src/: gl.c
test/opengl/shaders/: sky.frag  sky.vert
test/opengl/shaders/terrain/: height_gen.comp  terrain.frag  terrain.tesc  terrain.tese  terrain.vert
